tests/baselines/reference/arrayFind.errors.txt
arrayFind.ts(2,10): error TS99999: Annotated function was also inferred to be a type guard


==== arrayFind.ts (1 errors) ====
    // test fix for #18112, type guard predicates should narrow returned element
    function isNumber(x: any): x is number {
             ~~~~~~~~
!!! error TS99999: Annotated function was also inferred to be a type guard
      return typeof x === "number";
    }
    
    const arrayOfStringsNumbersAndBooleans = ["string", false, 0, "strung", 1, true];
    const foundNumber: number | undefined = arrayOfStringsNumbersAndBooleans.find(isNumber);
    
    const readonlyArrayOfStringsNumbersAndBooleans = arrayOfStringsNumbersAndBooleans as ReadonlyArray<string | number | boolean>;
    const readonlyFoundNumber: number | undefined = readonlyArrayOfStringsNumbersAndBooleans.find(isNumber);
    